--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
@@ -25,50 +25,52 @@ be automatically copied to the output folder.</div>
 </blockquote>
 
 <div class=Section1>
-<div class="para">1. From the main workbench window, click <b>File</b>
+<ol>
+<li><p class="para">From the main workbench window, click <b>File</b>
 >
-<b>New</b> > <b>Project</b>. The New Project wizard opens.</div>
+<b>New</b> > <b>Project</b>. The New Project wizard opens.</p></li>
 
-<p class="para">2. Select <b>Java</b> from the left pane and <b>Java
+<li><p class="para">Select <b>Java</b> from the left pane and <b>Java
 Project
 </b>from the right pane, then click <b>Next</b>. The New Java Project
-wizard opens.
+wizard opens.</p></li>
 
+<li><p class="para">In the&nbsp;<span class=label><b>Project Name</b></span>
+field, type a name for your new Java project.</p></li>
 
-<p class="para">3. In the&nbsp;<span class=label><b>Project Name</b></span>
-field, type a name for your new Java project.
-
-<p class="para">4. Check or clear the <b>Use default</b> check box to indicate
+<li><p class="para">Check or clear the <b>Use default</b> check box to indicate
 whether you want to use the default location for your new project. If you
 clear this check box, then type a path or click <b>Browse</b> to select
 a location for the project. Click&nbsp;<span class=label><b>Next</b></span>.
-The Java Settings Page opens.
+The Java Settings Page opens.</p></li>
 
-<p class="para">5. On the <b>Source</b> tab, select the <b>Use source folders
+<li><p class="para">On the <b>Source</b> tab, select the <b>Use source folders
 contained in the project </b>radio button to use project subfolders as
-source containers.
+source containers.</p></li>
 
-<p class="para">6. Optionally, click the&nbsp;<span class=label><b>Create
+<li><p class="para">Optionally, click the&nbsp;<span class=label><b>Create
 New Folder</b></span> button to create new source folder. You can also
-create new source folders at any time later.
+create new source folders at any time later.</p></li>
 
-<p class="para">7. Optionally, replace the default name in the&nbsp;<span class=label><b>Build
-output folder</b></span> field to use a different name for the output folder.
+<li><p class="para">Optionally, replace the default name in the&nbsp;<span class=label><b>Build
+output folder</b></span> field to use a different name for the output folder.</p></li>
 
-<p class="para">8. On the <b>Projects</b> tab, select the required projects
-to be on the build path for this project.
+<li><p class="para">On the <b>Projects</b> tab, select the required projects
+to be on the build path for this project.</p></li>
 
-<p class="para">9. On the <b>Libraries</b> tab, select JAR files and CLASS
+<li><p class="para">On the <b>Libraries</b> tab, select JAR files and CLASS
 file containers to add to the build path for this new project and attach
-source to the JAR files.
+source to the JAR files.</p></li>
 
-<p class="para">10. On the <b>Order and Export</b> tab, use the&nbsp;<span class=label><b>Up</b></span>
+<li><p class="para">On the <b>Order and Export</b> tab, use the&nbsp;<span class=label><b>Up</b></span>
 and&nbsp;<span class=label><b>Down</b></span> buttons to move the selected
 JAR file or CLASS file container up or down in the build path order for
-this new project.
+this new project.</p></li>
 
-<p class="para">11. Click&nbsp;<span class=label><b>Finish</b></span> when
-you are done.</div>
+<li><p class="para">Click&nbsp;<span class=label><b>Finish</b></span> when
+you are done.</p></li>
+</ol>
+</div>
 
 <blockquote>
 <div class=Section1><b>Note:</b> When you are using CVS as your repository,
