--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
@@ -15,35 +15,33 @@ Creating a new Java package</h1>
 
 <div class="para">To create new Java packages in the Package Explorer:</div>
 
-<div class="para" style="margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in"><![if !supportLists]>1.<![endif]>
-Optionally, select the project or source folder where you want the package
-to reside.</div>
+<ol>
+<li>
+<p class="para">Optionally, select the project or source folder where you want the package
+to reside.</p>
+</li>
 
-<div class="para" style="margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in"><![if !supportLists]>2.<![endif]>
-Click the <b>Create a Java Package</b> button in the workbench toolbar.
-The New Java Package wizard opens.</div>
+<li><p class="para">Click the <b>Create a Java Package</b> button in the workbench toolbar.
+The New Java Package wizard opens.</p></li>
 
-
-<p class="para" style="margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in"><![if !supportLists]>3.<![endif]>
-Edit the&nbsp;<span class=label><b>Source Folder</span></b> field to indicate
+<li>
+<p class="para">
+Edit the&nbsp;<span class=label><b>Source Folder</b></span> field to indicate
 in which container you want the new package to reside. You can either type
-a path or click&nbsp;<span class=label><b>Browse</span></b> to find the
+a path or click&nbsp;<span class=label><b>Browse</b></span> to find the
 container. If a folder was selected when you chose to create the new package,
-that folder appears in the&nbsp;<span class=label><b>Source Folder</span></b>
-field as the container for the new package.
+that folder appears in the&nbsp;<span class=label><b>Source Folder</b></span>
+field as the container for the new package.</p></li>
 
-<p class="para" style="margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in"><![if !supportLists]>4.<![endif]>
-In the&nbsp;<span class=label><b>Name</span></b> field, type a name for
-the new package.
+<li>
+<p class="para">
+In the&nbsp;<span class=label><b>Name</b></span> field, type a name for
+the new package.</p></li>
 
-<p class="para" style="margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in"><![if !supportLists]>5.<![endif]>
-Click&nbsp;<span class=label><b>Finish</span></b> when you are done.
-
+<li>
+<p class="para">
+Click&nbsp;<span class=label><b>Finish</b></span> when you are done.</p></li>
+</ol>
 <p class="para"><b>Note:</b> the default (unnamed) package always exists
 and does not need to be created.
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
