--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
@@ -15,24 +15,26 @@ Creating a new source folder</h1>
 In a project that uses source folders, you can create a new folder to contain
 Java source code.
 
-<p class="para">1. In the Package Explorer, select the project where you
-want the new source folder to reside.
+<ol>
+<li><p class="para">In the Package Explorer, select the project where you
+want the new source folder to reside.</p></li>
 
-  <p class="para">2. From the project's pop-up menu, select <b>New</b> > <b>Others</b>. 
-    The new wizard opens. 
-  <p class="para">3. Select Java from the left pane and Source Folder from the right pane, 
-  then click Next. The New Source Folder wizard opens. 
+<li><p class="para">From the project's pop-up menu, select <b>New</b> > <b>Others</b>. 
+    The new wizard opens.</p></li>
+<li><p class="para">Select Java from the left pane and Source Folder from the right pane, 
+  then click Next. The New Source Folder wizard opens.</p></li>
 
-  <p class="para">4. In the&nbsp;<span class=label><b>Project Name</b></span>
+<li> <p class="para">In the&nbsp;<span class=label><b>Project Name</b></span>
 field, the name of the selected project appears. If you need to edit this
 field, you can either type a path or click&nbsp;<span class=label><b>Browse</b></span>
-to choose a project that uses source folders.
+to choose a project that uses source folders.</p></li>
 
-<p class="para">5. In the&nbsp;<span class=label><b>Folder Name</b></span>
-field, type a name for the new source folder.
+<li><p class="para">In the&nbsp;<span class=label><b>Folder Name</b></span>
+field, type a name for the new source folder.</p></li>
 
-<p class="para">6. Click&nbsp;<span class=label><b>Finish</b></span> when
-you are done.
+<li><p class="para">Click&nbsp;<span class=label><b>Finish</b></span> when
+you are done.</p></li>
+</ol>
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-3.htm">Java projects</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
