--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -11,7 +11,7 @@
 <H1 CLASS="Head">Miscellaneous</H1>
 <ul>
   <li>You can organize imports by selecting a set of packages and choosing <b>Organize 
-    Imports</b> from pop-up manu or <b>Source &gt; Organize</b> Imports from the 
+    Imports</b> from pop-up manu or <b>Source &gt; Organize Imports</b> from the 
     menu bar.</li>
   <li>You can change the behavior of Organize Imports in <b>Window &gt; Preferences 
     &gt; Java &gt; Organize Imports</b>. Using 0 in the number field creates all 
@@ -57,7 +57,7 @@
     </ul>
   </li>
   <li>You can get the local history of an individual method or field.<br>
-    Select a method or a field in the Outline or Hierarchy View and execute <b>Replace 
+    Select a method or a field in the Outline or Hierarchy view and execute <b>Replace 
     With &gt; Local history</b> from the pop-up menu. <br>
     This will show you the history of this particular method or field and you 
     can select which version should replace the one in the workspace.<br>
