--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
@@ -21,10 +21,11 @@
     workbench toolbar button (Note: this button is only enabled when a Java editor 
     is open).</li>
   <li>You can have your copyright notice generated for newly created Java files. 
-    Edit the 'filecomment' template (or edit the 'typecomment' template if you 
-    need to customize the comment generated for each new type). <b>Note:</b> make 
-    sure that the appropriate checkbox(es) under <b>Window &gt; Preferences &gt; 
-    Java &gt; Code Generation</b> is/are selected.</li><li>You can&nbsp;quickly select Java code in a syntax-aware
+    Edit the '<i>filecomment</i>' template (or edit the '<i>typecomment</i>' template 
+    if you need to customize the comment generated for each new type). <b>Note:</b> 
+    make sure that the appropriate checkbox(es) under <b>Window &gt; Preferences 
+    &gt; Java &gt; Code Generation</b> is/are selected.</li>
+  <li>You can&nbsp;quickly select Java code in a syntax-aware
 way using the Structured Selection feature.<br>
 To use Structured Selection (optionally) select some text and press <b>Ctrl+Shift+Arrow
 Up</b> or select <b>Edit &gt; Expands Selection To &gt; Enclosing Element</b>
