f2 to display error message

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
@@ -25,11 +25,13 @@
     if you need to customize the comment generated for each new type). <b>Note:</b> 
     make sure that the appropriate checkbox(es) under <b>Window &gt; Preferences 
     &gt; Java &gt; Code Generation</b> is/are selected.</li>
-  <li>You can&nbsp;quickly select Java code in a syntax-aware
-way using the Structured Selection feature.<br>
-To use Structured Selection (optionally) select some text and press <b>Ctrl+Shift+Arrow
-Up</b> or select <b>Edit &gt; Expands Selection To &gt; Enclosing Element</b>
-from the menu bar.</li>
+  <li>You can&nbsp;quickly select Java code in a syntax-aware way using the Structured 
+    Selection feature.<br>
+    To use Structured Selection (optionally) select some text and press <b>Ctrl+Shift+Arrow 
+    Up</b> or select <b>Edit &gt; Expands Selection To &gt; Enclosing Element</b> 
+    from the menu bar.</li>
+  <li>Pressing <kbd>F2</kbd> when the caret is positioned inside a squiggly-underlined 
+    text in the editor presents the message for the error.</li>
 </ul>
 
 <p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
