accessors -> getters and setters

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
@@ -19,7 +19,7 @@
 </p>
 <p><a href="../concepts/concepts-7.htm">Java editor</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
-<p><a href="tasks-57.htm">Generating accessors</a>
+<p><a href="tasks-57.htm">Generating Getters and Setters</a>
 <br><a href="tasks-58.htm">Managing import statements</a>
 <br><a href="tasks-62.htm">Using the local history</a>
 <br><a href="tasks-66.htm">Formatting Java code</a>
