--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -227,7 +227,7 @@ suggest method names without the prefix or suffix.</td>
 <br><a href="../tasks/tasks-11.htm">Creating Java elements</a>
 <br><a href="../tasks/tasks-43.htm">Overriding a method using the Hierarchy
 view</a>
-<br><a href="../tasks/tasks-57.htm">Generating accessors</a>
+<br><a href="../tasks/tasks-57.htm">Generating Getters and Setters</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-126.htm">New Java Class wizard</a>
 <br><a href="../reference/ref-menu-source.htm">Source actions</a>
