--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -1,14 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Miscellaneous</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Miscellaneous</H1>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Miscellaneous</title></head>
+<body bgcolor="#ffffff">
+<h1 class="Head">Miscellaneous</h1>
 <ul>
   <li>You can organize imports by selecting a set of packages and choosing <b>Organize 
     Imports</b> from pop-up manu or <b>Source &gt; Organize Imports</b> from the 
@@ -24,7 +20,7 @@
     a 'link').</li>
   <li>QuickFix can help you fix spelling mistakes. 
     <ul>
-      <li>For example, type <i>&quot;a&quot;.lengh()</i> // note the missing &quot;t&quot; 
+      <li>For example, type <i>"a".lengh()</i> // note the missing "t" 
         and use QuickFix to correct the spelling mistake.</li>
     </ul>
   </li>
@@ -67,12 +63,14 @@
     from the pop-up menu. </li>
   <li>Single method parameters can be renamed like other local variables - by 
     selecting in the editor and executing <b>Refactor &gt; Rename</b> from the 
-    menu bar or pop-up menu.<br>
+    menu bar or pop-up menu.</li><li>Getters and setters and all references to the getters and the setters
+can be updated when a field is renamed - to do so select the field and execute
+<b>Refactor &gt; Rename</b> from the menu bar or pop-up menu.<br>
   </li>
+
 </ul>
 
 <p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
-</BODY>
-</HTML>
+</body></html>
