Spelling and layout corrections

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-19.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-19.htm
@@ -16,64 +16,62 @@ Creating a nested class</h1>
 <div class="para">You can create classes that are enclosed in other types
 (that is, nested classes).</div>
 
+<ol>
+<li><p class="para">Open the New Java Class wizard.</p></li>
 
-<p class="para">1. Open the New Java Class wizard.
-
-<p class="para">2. Edit the&nbsp;<span class=label><b>Source Folder</span></b>
+<li><p class="para">Edit the&nbsp;<span class=label><b>Source Folder</b></span>
 field to indicate in which folder you want the new class to reside. You
-can either type a path or click&nbsp;<span class=label><b>Browse</span></b>
+can either type a path or click&nbsp;<span class=label><b>Browse</b></span>
 to find the folder. If a folder is found for the current selection, that
 folder appears in the&nbsp;<span 
-class=label><b>Source Folder</span></b>
-field as the container for the new class.
+class=label><b>Source Folder</b></span>
+field as the container for the new class.</p></li>
 
-<p class="para">3. Select the&nbsp;<span class=label><b>Enclosing Type</span></b>
+<li><p class="para">Select the&nbsp;<span class=label><b>Enclosing Type</b></span>
 check box and type the name of the enclosing type in the <b>Enclosing Type</b>
-field. You can also click&nbsp;<span class=label><b>Browse</span></b> to
-select the enclosing type for the new class.
+field. You can also click&nbsp;<span class=label><b>Browse</b></span> to
+select the enclosing type for the new class.</p></li>
 
-<p class="para">4. In the&nbsp;<span class=label><b>Name</span></b> field,
-type a name for the new class.
+<li><p class="para">In the&nbsp;<span class=label><b>Name</b></span> field,
+type a name for the new class.</p></li>
 
-<p class="para">5. Select the desired modifiers by using the&nbsp;<span class=label><b>Modifiers</span></b>
-radio buttons and check boxes.
+<li><p class="para">Select the desired modifiers by using the&nbsp;<span class=label><b>Modifiers</b></span>
+radio buttons and check boxes.</p></li>
 
-<p class="para">6. In the&nbsp;<span class=label><b>Superclass</span></b>
-field, type or click&nbsp;<span class=label><b>Browse</span></b> to select
-a superclass for the new class.
+<li><p class="para">In the&nbsp;<span class=label><b>Superclass</b></span>
+field, type or click&nbsp;<span class=label><b>Browse</b></span> to select
+a superclass for the new class.</p></li>
 
-<p class="para">7. Click the&nbsp;<span class=label><b>Add</span></b> button
-to add interfaces for the new class to implement.
+<li><p class="para">Click the&nbsp;<span class=label><b>Add</b></span> button
+to add interfaces for the new class to implement.</p></li>
 
-<p class="para">8. If you want to create some method stubs in the new class:
-<ol start=8 type=1>
+<li><p class="para">If you want to create some method stubs in the new class:</p></li>
 <ul type=circle>
-<li class="MsoNormal">
+<li class="MsoNormal"><p>
 Select the&nbsp;<span 
       class=label><b>public static void main(String[]
-args)</span></b> check box if you want the wizard to add the main method
-to the new class, thus making it a starting point of an application.</li>
+args)</b></span> check box if you want the wizard to add the main method
+to the new class, thus making it a starting point of an application.</p></li>
 
-<li class="MsoNormal">
+<li class="MsoNormal"><p>
 Select the&nbsp;<span 
-      class=label><b>Constructors from superclass</span></b>
+      class=label><b>Constructors from superclass</b></span>
 check box if you want the wizard to create, in the new class, a set of
 constructors, one for each of the constructors declared in the superclass.
 Each of them will have the same number of parameters (of the same types)
-as the respective constructor from the superclass.</li>
+as the respective constructor from the superclass.</p></li>
 
-<li class="MsoNormal">
+<li class="MsoNormal"><p>
 Select the&nbsp;<span 
-      class=label><b>Inherited abstract methods</span></b>
+      class=label><b>Inherited abstract methods</b></span>
 check box if you want the wizard to generate method stubs for each of the
 abstract methods that the new class will inherit from its superclass and
-implemented interfaces.</li>
+implemented interfaces.</p></li>
 </ul>
+
+<li><div class="para">Click&nbsp;<span class=label><b>Finish</b></span>
+when you are done.</div></li>
 </ol>
-
-<div class="para">9. Click&nbsp;<span class=label><b>Finish</span></b>
-when you are done.</div>
-
 
 <p class="para"><b>Note:</b> The new class is created in the same compilation
 unit as its enclosing type.
