--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
@@ -16,35 +16,32 @@ Creating a top-level interface</h1>
 <div class="para">You can create interfaces that are not enclosed in other
 types.</div>
 
-
-<p class="para">1. Open the New Java Interface wizard.
-
-<p class="para">2. Edit the&nbsp;<span class=label><b>Source Folder</span></b>
-field as needed to indicate in which folder you want the new interface
-to reside. You can either type a path or click the&nbsp;<span class=label><b>Browse</span></b>
-button to find the folder. If a folder is found for the current selection,
-that folder appears in the&nbsp;<span class=label><b>Source Folder</span></b>
-field as the container for the new interface.
-
-<p class="para">3. In the&nbsp;<span class=label><b>Package</span></b>
-field, type a name or click&nbsp;<span class=label><b>Browse</span></b>
-to select the package where you want the new interface to reside. If you
-want the new interface to be created in the default package, leave this
-field empty.
-
-<p class="para">4. Clear the&nbsp;<span class=label><b>Enclosing Type</span></b>
-check box.
-
-<p class="para">5. In the&nbsp;<span class=label><b>Name</span></b> field,
-type a name for the new interface.
-
-<p class="para">6. Select the <b>public</b> or <b>default</b> access modifier
-using the&nbsp;<span class=label><b>Modifiers</span></b> radio buttons.
-
-<p class="para">7. Click the&nbsp;<span class=label><b>Add</span></b> button
-to add interfaces for the new interface to extend.
-
-<p class="para">8. Click&nbsp;<span class=label><b>Finish</span></b>.
+  <ol>
+    <li> 
+      <p class="para">Open the New Java Interface wizard.</p>
+    </li>
+    <li> 
+      <p class="para">Edit the&nbsp;<span class=label><b>Source Folder</b></span> 
+        field as needed to indicate in which folder you want the new interface 
+        to reside. You can either type a path or click the&nbsp;<span class=label><b>Browse</b></span> 
+        button to find the folder. If a folder is found for the current selection, 
+        that folder appears in the&nbsp;<span class=label><b>Source Folder</b></span> 
+        field as the container for the new interface.</p>
+    </li>
+    <li><p class="para">In the&nbsp;<span class=label><b>Package</b></span> field, 
+      type a name or click&nbsp;<span class=label><b>Browse</b></span> to select 
+      the package where you want the new interface to reside. If you want the 
+      new interface to be created in the default package, leave this field empty. </p></li>
+    <li><p class="para">Clear the&nbsp;<span class=label><b>Enclosing Type</b></span> 
+      check box. </p></li>
+    <li><p class="para">In the&nbsp;<span class=label><b>Name</b></span> field, type 
+      a name for the new interface. </p></li>
+    <li><p class="para">Select the <b>public</b> or <b>default</b> access modifier 
+      using the&nbsp;<span class=label><b>Modifiers</b></span> radio buttons. </p></li>
+    <li><p class="para">Click the&nbsp;<span class=label><b>Add</b></span> button 
+      to add interfaces for the new interface to extend. </p></li>
+    <li><p class="para">Click&nbsp;<span class=label><b>Finish</b></span>. </p></li>
+  </ol>
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
