--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-24.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-24.htm
@@ -16,38 +16,30 @@ Creating a nested interface</h1>
 <div class="para">You can create interfaces that are enclosed in other
 types (that is, nested interfaces).</div>
 
-
-<p class="para">1. Open the New Java Interface wizard.
-
-<p class="para">2. Edit the&nbsp;<span class=label><b>Source Folder</span></b>
-field to indicate in which folder you want the new interface to reside.
-You can either type a path or click the&nbsp;<span class=label><b>Browse</span></b>
-button to find the folder. If a folder is found for the current selection,
-that folder appears in the <b>Source&nbsp;<span class=label>Folder</span></b>
-field as the container for the new interface.
-
-<p class="para">3. Select the&nbsp;<span class=label><b>Enclosing Type</span></b>
-check box.
-
-<p class="para">4. In the&nbsp;<span class=label><b>Enclosing Type</span></b>
-field, type the name of the enclosing type or click the&nbsp;<span class=label><b>Browse</span></b>
-button to select the enclosing type for the new interface.
-
-<p class="para">5. In the&nbsp;<span class=label><b>Name</span></b> field,
-type a name for the new interface.
-
-<p class="para">6. Select the <b>public</b> or <b>default</b> access modifier
-by using the&nbsp;<span class=label><b>Modifiers</span></b> radio buttons.
-
-<p class="para">7. Select the&nbsp;<span class=label><b>static</span></b>
-check box if you want the new interface to be static.
-
-<p class="para">8. Click the&nbsp;<span class=label><b>Add</span></b> button
-to add interfaces for the new interface to extend.
-
-<p class="para">9. Click&nbsp;<span class=label><b>Finish</span></b> when
-you are done.
-
+  <ol>
+    <li><p class="para">Open the New Java Interface wizard. </p></li>
+    <li><p class="para">Edit the&nbsp;<span class=label><b>Source Folder</b></span> 
+      field to indicate in which folder you want the new interface to reside. 
+      You can either type a path or click the&nbsp;<span class=label><b>Browse</b></span> 
+      button to find the folder. If a folder is found for the current selection, 
+      that folder appears in the <b>Source&nbsp;<span class=label>Folder</span></b> 
+      field as the container for the new interface. </p></li>
+    <li><p class="para">Select the&nbsp;<span class=label><b>Enclosing Type</b></span> 
+      check box. </p></li>
+    <li><p class="para">In the&nbsp;<span class=label><b>Enclosing Type</b></span> 
+      field, type the name of the enclosing type or click the&nbsp;<span class=label><b>Browse</b></span> 
+      button to select the enclosing type for the new interface. </p></li>
+    <li><p class="para">In the&nbsp;<span class=label><b>Name</b></span> field, type 
+      a name for the new interface. </p></li>
+    <li><p class="para">Select the <b>public</b> or <b>default</b> access modifier 
+      by using the&nbsp;<span class=label><b>Modifiers</b></span> radio buttons. </p></li>
+    <li><p class="para">Select the&nbsp;<span class=label><b>static</b></span> check 
+      box if you want the new interface to be static. </p></li>
+    <li><p class="para">Click the&nbsp;<span class=label><b>Add</b></span> button 
+      to add interfaces for the new interface to extend. </p></li>
+    <li><p class="para">Click&nbsp;<span class=label><b>Finish</b></span> when you 
+      are done. </p></li>
+  </ol>
 <p class="para"><b>Note</b>: The new interface is created in the same compilation
 unit as its enclosing type.
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
