--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
@@ -20,48 +20,54 @@ already exists in your workbench.</div>
 <h2>
 Creating a new manifest</h2>
 
-<ol start=1 type=1>Follow the procedure for creating a JAR file, but click&nbsp;<span class=label><b>Next</span></b>
-in the last step to go to the JAR Packaging Options page.
-<p>Set any advanced options that you want to set, and then click&nbsp;<span class=label><b>Next</span></b>
-again to go to the JAR Manifest Specification page.
-<p>If it is not already selected, click the&nbsp;<span class=label><b>Generate
-the manifest file</span></b> button.
-<p>You can now choose to save the manifest in the workbench. This will
+<ol start=1 type=1>
+<li><p>Follow the procedure for creating a JAR file, but click&nbsp;<span class=label><b>Next</b></span>
+in the last step to go to the JAR Packaging Options page.</p></li>
+<li>
+      <p>Set any advanced options that you want to set, and then click&nbsp;<span class=label><b>Next</b></span> 
+        again to go to the JAR Manifest Specification page.</p>
+    </li>
+<li><p>If it is not already selected, click the&nbsp;<span class=label><b>Generate
+the manifest file</b></span> button.</p></li>
+<li><p>You can now choose to save the manifest in the workbench. This will
 save the manifest for later use. Click&nbsp;<span class=label>Save the
-manifest in the workspace</span>, then click&nbsp;<span class=label><b>Browse</span></b>
-next to the&nbsp;<span class=label><b>Manifest file</span></b> field to
-specify a path and file name for the manifest.
-<p>If you decided to save the manifest file in the previous step and you
+manifest in the workspace</span>, then click&nbsp;<span class=label><b>Browse</b></span>
+next to the&nbsp;<span class=label><b>Manifest file</b></span> field to
+specify a path and file name for the manifest.</p></li>
+<li><p>If you decided to save the manifest file in the previous step and you
 chose to save the JAR description on the previous wizard page, then you
 can choose to reuse it in the JAR description (by selecting the <b>Reuse
 and save the manifest in the workspace </b>checkbox). This means that the
 saved file will be used when the JAR file is recreated from the JAR description.This
 option is useful if you want to modify or replace the manifest file before
-recreating the JAR file from the description.
-<p>You can choose to seal the JAR and optionally exclude some packages
+recreating the JAR file from the description.</p></li>
+<li><p>You can choose to seal the JAR and optionally exclude some packages
 from being sealed or specify a list with sealed packages. By default, nothing
-is sealed.
-<p>Click the&nbsp;<span class=label><b>Browse</span></b> button next to
-the&nbsp;<span class=label><b>Main-Class</span></b> field to specify the
+is sealed.</p></li>
+<li><p>Click the&nbsp;<span class=label><b>Browse</b></span> button next to
+the&nbsp;<span class=label><b>Main-Class</b></span> field to specify the
 entry point for your applications.
 <br><b>Note</b>: If your class is not in the list, then you forgot to select
-it at the beginning.
-<p>Click&nbsp;<span class=label><b>Finish</span></b>. This will create
-the JAR, and optionally a JAR description and a manifest file.</ol>
+it at the beginning.</p></li>
+<li><p>Click&nbsp;<span class=label><b>Finish</b></span>. This will create
+the JAR, and optionally a JAR description and a manifest file.</p></li>
+</ol>
 
 <h2>
 Using an existing manifest</h2>
 You can use an existing manifest file that already exists in your workbench.
-<ol start=1 type=1>Follow the procedure for creating a JAR file, but click&nbsp;<span class=label><b>Next</span></b>
-in the last step to go to the JAR Packaging Options page.
-<p>Set any advanced options that you want to set, and the click&nbsp;<span class=label><b>Next</span></b>
-again to go to the JAR Manifest Specification page.
-<p>Click the&nbsp;<span class=label><b>Use existing manifest from workspace
-</b>radio&nbsp;</span>button.
-<p>Click the&nbsp;<span class=label><b>Browse</span></b> button to choose
-a manifest file from the workbench.
-<p>Click&nbsp;<span class=label><b>Finish</span></b>. This will create
-the JAR and optionally a JAR description.</ol>
+<ol start=1 type=1>
+<li><p>Follow the procedure for creating a JAR file, but click&nbsp;<span class=label><b>Next</b></span>
+in the last step to go to the JAR Packaging Options page.</p></li>
+<li><p>Set any advanced options that you want to set, and the click&nbsp;<span class=label><b>Next</b></span>
+again to go to the JAR Manifest Specification page.</p></li>
+<li><p>Click the&nbsp;<span class=label><b>Use existing manifest from workspace
+</b>radio&nbsp;</span>button.</p></li>
+<li><p>Click the&nbsp;<span class=label><b>Browse</b></span> button to choose
+a manifest file from the workbench.</p></li>
+<li><p>Click&nbsp;<span class=label><b>Finish</b></span>. This will create
+the JAR and optionally a JAR description.</p></li>
+</ol>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
