--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
@@ -16,73 +16,72 @@ Creating a top-level class</h1>
 <div class="para">You can create classes that are not enclosed in other
 types.</div>
 
+<ol>
+<li><p class="para">Open the New Class wizard.</p></li>
 
-<p class="para">1. Open the New Class wizard.
-
-<p class="para">2. Edit the&nbsp;<span class=label><b>Source Folder</span></b>
+<li><p class="para">Edit the&nbsp;<span class=label><b>Source Folder</b></span>
 field as needed to indicate in which folder you want the new class to reside.
-You can either type a path or click the&nbsp;<span class=label><b>Browse</span></b>
+You can either type a path or click the&nbsp;<span class=label><b>Browse</b></span>
 button to find the folder. If a folder is found for the current selection,
 that folder appears in the&nbsp;<span class=label>Folder</span> field as
-the container for the new class.
+the container for the new class.</p></li>
 
-<p class="para">3. In the&nbsp;<span class=label><b>Package</span></b>
-field, type or click&nbsp;<span class=label><b>Browse</span></b> to select
+<li><p class="para">In the&nbsp;<span class=label><b>Package</b></span>
+field, type or click&nbsp;<span class=label><b>Browse</b></span> to select
 the package where you want the new class to reside. Leave this field empty
-to indicate that you want the new class to be created in the default package.
+to indicate that you want the new class to be created in the default package.</p></li>
 
-<p class="para">4. Leave the&nbsp;<span class=label><b>Enclosing Type</span></b>
-box deselected.
+<li><p class="para">Leave the&nbsp;<span class=label><b>Enclosing Type</b></span>
+box deselected.</p></li>
 
-<p class="para">5. In the&nbsp;<span class=label><b>Name</span></b> field,
-type a name for the new class.
+<li><p class="para">In the&nbsp;<span class=label><b>Name</b></span> field,
+type a name for the new class.</p></li>
 
-<p class="para">6. Select the <b>public</b> or <b>default</b> access modifier
-using the&nbsp;<span class=label><b>Modifiers</span></b> radio buttons.
+<li><p class="para">Select the <b>public</b> or <b>default</b> access modifier
+using the&nbsp;<span class=label><b>Modifiers</b></span> radio buttons.
 <br><b>Note:</b> The private and protected options are available only when
-creating a class enclosed in a type.
+creating a class enclosed in a type.</p></li>
 
-<p class="para">7. Optionally, select the <b>abstract</b> or <b>final</b>
+<li><p class="para">Optionally, select the <b>abstract</b> or <b>final</b>
 modifier for the new class using the appropriate check boxes:
 <br><b>Note:</b> The static option is available only when creating a class
-enclosed in a type.
+enclosed in a type.</p></li>
 
-<p class="para">8. In the&nbsp;<span class=label><b>Superclass</span></b>
-field, type or click&nbsp;<span class=label><b>Browse</span></b> to select
-a superclass for the new class.
+<li><p class="para">In the&nbsp;<span class=label><b>Superclass</b></span>
+field, type or click&nbsp;<span class=label><b>Browse</b></span> to select
+a superclass for the new class.</p></li>
 
-<p class="para">9. Click the&nbsp;<span class=label><b>Add</span></b> button
-to add interfaces for the new class to implement.
+<li><p class="para">Click the&nbsp;<span class=label><b>Add</b></span> button
+to add interfaces for the new class to implement.</p></li>
 
-<p class="para">10. If you want to create some method stubs in the new
-class:
-<ol start=10 type=1>
+<li><p class="para">If you want to create some method stubs in the new
+class:</p>
 <ul type=circle>
-<li class="MsoNormal">
+<li class="MsoNormal"><p>
 Select the&nbsp;<span 
       class=label><b>public static void main(String[]
-args)</span></b> box if you want the wizard to add the main method to the
-new class, thus making it a starting point of an application.</li>
+args)</b></span> box if you want the wizard to add the main method to the
+new class, thus making it a starting point of an application.</p><b></b></li>
 
-<li class="MsoNormal">
+<li class="MsoNormal"><p>
 Select the&nbsp;<span 
-      class=label><b>Constructors from superclass</span></b>
+      class=label><b>Constructors from superclass</b></span>
 check box if you want the wizard to create, in the new class, a set of
 constructors, one for each of the constructors declared in the superclass.
 Each of them will have the same number of parameters (of the same types)
-as the respective constructor from the superclass.</li>
+as the respective constructor from the superclass.</p></li>
 
-<li class="MsoNormal">
+<li class="MsoNormal"><p>
 Select the&nbsp;<span 
-      class=label><b>Inherited abstract methods</span></b>
+      class=label><b>Inherited abstract methods</b></span>
 check box if you want the wizard to generate method stubs for each of the
 abstract methods that the new class will inherit from its superclass and
-implemented interfaces.</li>
+implemented interfaces.</p></li>
 </ul>
+</li>
+<li><p class="para">Click&nbsp;<span class=label><b>Finish</b></span>
+when you are done.</p></li>
 </ol>
-
-<div class="para">11. Click&nbsp;<span class=label><b>Finish</span></b>
-when you are done.</div>
 
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-3.htm">Java projects</a>
