--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
@@ -9,71 +9,44 @@
 </head>
 <body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US">
 
-<div class=Section1>
 <h1>
 Creating a new JAR file</h1>
 
 <div class="para">To create a new JAR file in the workbench:</div>
 
-
-<p class="para">1. In the Package Explorer, you can optionally pre-select
-one or more Java elements to export. (These will be automatically selected
-in the <b>JAR Package Specification</b> wizard page, described in Step
-4.)
-
-<p class="para">2. From the menu bar, select <b>File</b> > <b>Export</b>.
-
-<p class="para">3. Select <b>JAR file</b>, then click&nbsp;<span class=label><b>Next</span></b>.
-
-<p class="para">4. In the <b>Jar Package Specification</b> page, select
-the resources that you want to export in the<span 
-class=label> <b>Select
-the resources to export&nbsp;</span></b>field.
-
-<p class="para">5. Select the appropriate check box to specify whether
-you want to <b>Export generated class files and resources</b> or <b>Export
-Java source files and resources</b>.</div>
-
-<blockquote>
-<div class=Section1><b>Note</b>: Selected resources are exported in both
-cases.</div>
-</blockquote>
-
-<div class=Section1>
-<div class="para">6. In the&nbsp;<span class=label><b>Select the export
-destination</span></b> field, either type or click&nbsp;<span class=label><b>Browse</span></b>
-to select a location for the JAR file.</div>
-
-
-<p class="para">7. Select or clear the&nbsp;<span class=label><b>Compress
-the contents of the JAR file</span></b> check box.
-
-<p class="para">8. Select or clear the&nbsp;<span class=label><b>Overwrite
-existing files without warning </b>check box. If you clear this<b> </b>check
-box,&nbsp;</span>then you will be prompted to confirm the replacement of
-each file that will be overwritten.</div>
-
-<blockquote>
-<div class=Section1><b>Note</b>: The overwrite option is applied when writing
-the JAR file, the JAR description, and the manifest file.</div>
-</blockquote>
-
-<div class=Section1>
-<div class="para">9. You have two options:</div>
-
-<ol start=9 type=1>
-<ul type=circle>
-<li class="MsoNormal">
-Click&nbsp;<span 
-      class=label><b>Finish</span></b> to create the
-JAR file immediately.</li>
-
-<li class="MsoNormal">
-Click&nbsp;<span 
-      class=label><b>Next</span></b> to use the JAR Packaging
-Options page to set advanced options, create a JAR description, or change
-the default manifest.</li>
-</ul>
+<ol>
+  <li><p class="para">In the Package Explorer, you can optionally pre-select one or 
+    more Java elements to export. (These will be automatically selected in the 
+    <b>JAR Package Specification</b> wizard page, described in Step 4.) </p></li>
+  <li><p class="para">From the menu bar, select <b>File</b> > <b>Export</b>. </p></li>
+  <li><p class="para">Select <b>JAR file</b>, then click&nbsp;<span class=label><b>Next</b></span>. </p></li>
+  <li><p class="para">In the <b>Jar Package Specification</b> page, select the resources 
+    that you want to export in the<span 
+class=label> <b>Select the resources to export&nbsp;</b></span>field. </p></li>
+  <li><p class="para">Select the appropriate check box to specify whether you want 
+    to <b>Export generated class files and resources</b> or <b>Export Java source 
+    files and resources</b>.</p>
+    <div class=Section1><p><b>Note</b>: Selected resources are exported in both cases.</p></div>
+    <li><p class="para">In the&nbsp;<span class=label><b>Select the export destination</b></span> 
+      field, either type or click&nbsp;<span class=label><b>Browse</b></span> 
+      to select a location for the JAR file.</p></li>
+    <li><p class="para">Select or clear the&nbsp;<span class=label><b>Compress the 
+      contents of the JAR file</b></span> check box. </p></li>
+    <li><p class="para">Select or clear the&nbsp;<span class=label><b>Overwrite existing 
+      files without warning </b>check box. If you clear this<b> </b>check box,&nbsp;</span>then 
+      you will be prompted to confirm the replacement of each file that will be 
+      overwritten.</p></li>
+    <div class=Section1><p><b>Note</b>: The overwrite option is applied when writing 
+      the JAR file, the JAR description, and the manifest file.</p></div>
+  <li><p class="para">You have two options:</p></li>
+    <ul type=circle>
+      <li class="MsoNormal"> <p>Click&nbsp;<span 
+      class=label><b>Finish</b></span> to create the JAR file immediately.</p></li>
+      <li class="MsoNormal"> <p>Click&nbsp;<span 
+      class=label><b>Next</b></span> to use the JAR Packaging Options page to 
+        set advanced options, create a JAR description, or change the default 
+        manifest.</p></li>
+    </ul>
 </ol>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
@@ -85,7 +58,7 @@ the default manifest.</li>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
 <br><a href="../reference/ref-export-jar.htm">JAR file exporter</a>
 <br><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
-<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
 
 </body>
 </html>
