accessors -> getters and setters

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -32,7 +32,7 @@
     <a href="../tasks/tasks-14.htm">Creating a Java project with source folders</a><br>
     <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
     <a href="../tasks/tasks-47.htm">Filtering elements</a><br>
-    <a href="../tasks/tasks-57.htm">Generating Getters and Setters</a><br>
+    <a href="../tasks/tasks-57.htm">Generating getters and setters</a><br>
     <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
 </div>
 
