--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -62,7 +62,7 @@
   <p><a href="../tasks/tasks-59.htm">Adding required import statements</a><br>
     <a href="../tasks/tasks-138.htm">Evaluating expressions</a><br>
     <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
-    <a href="../tasks/tasks-57.htm">Generating Getters and Setters</a><br>
+    <a href="../tasks/tasks-57.htm">Generating getters and setters</a><br>
     <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
     <a href="../tasks/tasks-73.htm">Opening an editor for a selected element</a><br>
     <a href="../tasks/tasks-65.htm">Using content/code assist</a><br>
