Added alt tag for copyright statement

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_preview_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_preview_manip.htm
@@ -25,7 +25,7 @@
 <pre><font color="#4444CC">void modifyCompilationUnit(ICompilationUnit cunit) throws PartInitException, CoreException {<br>	IEditorPart editor= JavaUI.openInEditor(cunit);<br>	IEditorInput input= editor.getEditorInput();<br>	IWorkingCopyManager manager= JavaUI.getWorkingCopyManager();<br>	manager.connect(input);<br>	try {<br>		ICompilationUnit workingCopy= manager.getWorkingCopy(input);<br>		// do the modifications on workingCopy using the normal JDT Core API.
 	} finally {<br>		manager.disconnect(input);<br>	}<br>	// either keep the editor dirty or use editor.doSave(IProgressMonitor monitor)
 	// to save the changes programmatically.<br>}</font><br></pre>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"> </a> 
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved."> </a> 
 </p>
 </body>
 </html>
