--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
@@ -33,7 +33,7 @@ simple launch configuration. By default, the resulting running application
 <font color="#4444cc">
 <pre>   ILaunchManager manager = DebugPlugin.getDefault().getLaunchManager();<br>   ILaunchConfigurationType type = manager.getLaunchConfigurationType(IJavaLaunchConfigurationConstants.ID_JAVA_APPLICATION);<br>   ILaunchConfigurationWorkingCopy wc = type.newInstance(null, "SampleConfig");<br>   wc.setAttribute(IJavaLaunchConfigurationConstants.ATTR_PROJECT_NAME, "myJavaProject");<br>   wc.setAttribute(IJavaLaunchConfigurationConstants.ATTR_MAIN_TYPE_NAME, "myClass");<br>   ILaunchConfiguration config = wc.doSave();	<br>   config.launch(ILaunchManager.RUN_MODE, null);<br></pre>
 </font>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
 </p>
 </body>
