--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
@@ -46,7 +46,7 @@ This allows other plug-ins to implement their own Jar export/import wizards and
 to save the content of the JarPackageData object to a corresponding Jar description 
 file.<br>
  
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
  </a>
  </p>
  
