--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int.htm
@@ -28,7 +28,7 @@ platform resource model and contribute Java specific views, editors, and actions
 to the workbench.</p>
 <p>Then we will look at how to use the JDT API to accomplish common tasks, 
 such as generating, compiling, and running Java code programmatically.</p>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
 </p>
 </body>
