--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -55,7 +55,7 @@
     with a preview in a Java editor?</a><br>
   </li>
 </ul>
- <a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" border="0">
+ <a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved."border="0">
  </a>
  
 </body>
