--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -125,7 +125,7 @@ can use the <b><a href="../reference/api/org/eclipse/jdt/core/IWorkingCopy.html#
 method. In this example, the reported problem will be that <b>Zork cannot 
 be resolved or is not a valid superclass</b> and its id is <b>IProblem.SuperclassNotFound</b>
  . </p>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
 </p>
 </body>
