--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_new_wizard_page.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_new_wizard_page.htm
@@ -84,7 +84,7 @@
 		}
    }
 }</font></pre>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
  </a>
  </p>
  
