--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_open_editor.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_open_editor.htm
@@ -25,7 +25,7 @@ of a Java compilation unit.</p>
 <br>
     The methods <code>openInEditor</code> and <code>revealInEditor</code>
  also  work for class files and for members contained in class files.<br>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
 </p>
 </body>
