--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_prompter.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_prompter.htm
@@ -41,7 +41,7 @@
 In addition to methods for creating a &nbsp;type prompter dialog the class <a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"> 
 JavaUI</a> provides additional methods for creating package and main type prompter 
 dialogs as well.<br>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
 </p>
 </body>
