--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_render.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_render.htm
@@ -76,7 +76,7 @@ the   structure of the elements presented in the viewer then the client should
  update the viewer using the standard JFace API (see refresh methods on StructuredViewer,
   and the add and remove methods on TableViewer and AbstractTreeViewer).
     
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
 </p>
 </body>
