--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
@@ -271,7 +271,7 @@ Java   behavior.&nbsp; This nature (<b>org.eclipse.jdt.core.JavaCore#NATURE_ID</
        can be considered the parent of all projects in the workspace that have
        the Java project nature (and therefore can be treated as an <a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html"><b>
        IJavaProject</b></a>).</p>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
 </p>
 </body>
