--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
@@ -108,7 +108,7 @@ are projects, packages, classes and interfaces. The class&nbsp;       <a href=".
     <br>
   </li>
 </ul>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
 </p>
 </body>
