--- a/bundles/org.eclipse.jdt.doc.isv/samples/samples.html
+++ b/bundles/org.eclipse.jdt.doc.isv/samples/samples.html
@@ -19,7 +19,7 @@
        then extract the contents of the examples zip file to <b>d:\eclipse-sdk</b>
       .&nbsp;&nbsp;&nbsp;</p>
 <p>Start the workbench.&nbsp; The example plug-ins should be installed.</p>
-<p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
+<p><a href="../hglegal2002.htm"><img border="0" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." src="../ngibmcpy2002.gif">
 </a>
 </p>
 </body>
