--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
@@ -12,7 +12,7 @@
 <h1 class="Head">
 Showing and hiding members in Java views</h1>
 
-<p><br>Several Java views (e.g. Outline, Package Explorer, Members) offer
+<p>Several Java views (e.g. Outline, Package Explorer, Members) offer
 filtering of members (fields, types and methods). The filters are available
 as toolbar buttons. There are 3 member filters:
 <ul>
