--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-95.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-95.htm
@@ -28,7 +28,7 @@ and password.
   <li>Click <b>OK</b> to change the properties.
 </ol>
 
-<p><b>Note:</b> The properties will be changed for all projects shared with the selected repository.
+<p><b>Note:</b> The properties will be changed for all projects shared with the selected repository location.
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
